# Mirage

./: .gitignore  .gitmodules  CMakeLists.txt  Mirage.sln  README.md  a  generate_projects.bat  premake5.lua
Mirage/: Mirage.vcxproj  Mirage.vcxproj.filters  mirage.lua
Mirage/include/: Mirage.h  Mirage.hpp
Mirage/src/: application.cpp  application.hpp  entry_point.hpp  window.cpp  window.hpp
Mirage/src/Mirage/: Application.cpp  Application.h  Application.hpp  Core.h  EntryPoint.h  EntryPoint.hpp  Log.cpp  Log.h  Window.cpp  Window.hpp
Mirage/src/Mirage/Events/: ApplicationEvent.h  ApplicationEvent.hpp  Event.h  Event.hpp  KeyEvent.h  KeyEvent.hpp  MouseEvent.h  MouseEvent.hpp
Mirage/src/Mirage/Utilities/: Log.hpp  log.cpp  log.h
Mirage/src/Mirage/event_system/: event.hpp  event_handler.hpp  mouse_event.hpp  window_event.hpp
Mirage/src/event_system/: event.hpp  event_handler.hpp  window_event.hpp
Mirage/src/utility/: log.hpp
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  sandbox.lua
Sandbox/src/: SandboxApplication.cpp  sandbox_application.cpp
cmake/: dependency_manager.cmake  system_link.cmake
include/: mirage.hpp
mirage.test/: mirage.test.vcxproj
shader/: fragment_shader.glsl
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: CMakeLists.txt  application.cpp  application.hpp  entry_point.hpp  window.cpp  window.hpp
src/event_system/: event_handler.hpp  mouse_event.hpp
src/mirage/: CMakeLists.txt  application.cpp  application.hpp  entry_point.hpp  exception.hpp  pch.hpp  window.cpp  window.hpp
src/mirage/event_system/: event_handler.hpp  key_event.hpp
src/mirage/graphics/: buffer.cpp  buffer.hpp  index_buffer.cpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp
src/mirage/utility/: callback_functions.cpp  callback_functions.hpp  log.cpp  log.hpp
src/sandbox/: CMakeLists.txt  sandbox_application.cpp
src/utility/: log.cpp  log.hpp
